# incognito

./: .coverage  .gitignore  .gitlab-ci.yml  404.html  Makefile  README.md  index.html  objects.inv  pyproject.toml  search.html  test.py
.github/worflows/: ci.yml
.github/workflows/: ci.yml
api/: index.html
docs/: mkdocs.yml
docs/docs/: api.md  index.md
docs/site/: index.html  objects.inv
docs/site/api/: index.html
docs/site/search/: search_index.json
incognito/: __init__.py  __main__.py  analyzer.py  anonymizer.py  cli.py  mask.py
incognito_anonymizer/: __init__.py  analyzer.py  anonymizer.py  anotate.py  cli.py  mask.py
search/: search_index.json
tests/: test_ano.py  test_anotate.py  test_cli.py  test_dict.py
